@@ -1,5 +1,9 @@
 2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowser.cpp: 
+
+2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Debug.h:
 	* Text.h:
 	* FontStyle.h:
